--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
                     // a = data.data;
                     // console.log(a.length);
                     
-                    let item = `<div class="single-result row align-items-center my-3 p-3">
+                    let item = '';
+                    item = `<div class="single-result row align-items-center my-3 p-3">
                                     <div class="col-md-9">
                                         <img src="${albumCover}"/>
                                         <h3 class="lyrics-name">${songName}</h3>
